ME_4600/MESDK/ME-3000/VC/meDefs.h

    #define MAKE_DACFIFOENTRY(ch,val) ((ch) <<12) + ((val) & 0xFFF)


    // SIO register structure 
    //---------------------------------------------------------------------
    typedef struct _ME3000_SIO_REGS
    {
        char    RHR;        // Reveive Register
        char    IER;        // Interrupt Enable Register
        char    FCR;        // FIFI Control Register 
        char    LCR;        // Line Control Register
        char    MCR;        // Modem Control Register
        char    LSR;        // Line Status Register
        char    MSR;        // Modem Satus Register
        char    SPR;        // ScatchPad Register
    } ME3000_SIO_REGS, *PME3000_SIO_REGS;


    // SIO communication structure 
    //---------------------------------------------------------------------
    typedef struct _ME3000_SIO
    {
        int     Mode;
        int     InBufferSize;
        int     InBufferCount;
        int     InBufferReadPointer;
        int     InBufferWritePointer;
        int     InBufferOverwrite;
        int     InBufferOverwriteCount;
        int     InStop;
        int     InError;

        int     OutBufferSize;
        int     OutBufferCount;
        int     OutBufferEndPointer;
        int     OutError;

        char    *pInBuffer;     
        char    *pOutBuffer;    
    } ME3000_SIO, *PME3000_SIO;