ME_4600/MESDK/ME-3000/VBasic/ME3000.BAS


Declare Function me3000SetPriority Lib "me3000.dll" Alias "_VBme3000SetPriority@8" (ByVal lBoardNumber As Long, ByVal lPriority As Long) As Long
Declare Function me3000AOAddToDACFIFO Lib "me3000.dll" Alias "_VBme3000AOAddToDACFIFO@8" (ByVal lBoardNumber As Long, ByVal lEntry As Long) As Long
Declare Function me3000AOClearDACFIFO Lib "me3000.dll" Alias "_VBme3000AOClearDACFIFO@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000AOReset Lib "me3000.dll" Alias "_VBme3000AOReset@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000AOSetTimer Lib "me3000.dll" Alias "_VBme3000AOSetTimer@8" (ByVal lBoardNumber As Long, ByVal lTime As Long) As Long
Declare Function me3000AOSetTrigger Lib "me3000.dll" Alias "_VBme3000AOSetTrigger@8" (ByVal lBoardNumber As Long, ByVal lModePolarity As Long) As Long
Declare Function me3000AOSetMode Lib "me3000.dll" Alias "_VBme3000AOSetMode@16" (ByVal lBoardNumber As Long, ByVal lChannel As Long, ByVal lRange As Long, ByVal lMode As Long) As Long
Declare Function me3000AOSingle Lib "me3000.dll" Alias "_VBme3000AOSingle@12" (ByVal lBoardNumber As Long, ByVal lChannel As Long, ByVal iValue As Integer) As Long
Declare Function me3000AOWrapAround Lib "me3000.dll" Alias "_VBme3000AOWrapAround@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000AOStop Lib "me3000.dll" Alias "_VBme3000AOStop@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000AOStopEx Lib "me3000.dll" Alias "_VBme3000AOStopEx@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000AOUpdate Lib "me3000.dll" Alias "_VBme3000AOUpdate@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000AOContinuous Lib "me3000.dll" Alias "_VBme3000AOContinuous@16" (ByVal lBoardNumber As Long, ByVal lMode As Long, ByVal lSize As Long, ByRef piBuffer As Integer) As Long
Declare Function me3000AOContinuousEx Lib "me3000.dll" Alias "_VBme3000AOContinuousEx@28" (ByVal lBoardNumber As Long, ByVal lMode As Long, ByVal lSize As Long, ByRef piBuffer As Integer, ByVal lLoops As Long, ByVal lDelay As Long, ByVal pCallBack As Long) As Long
Declare Function me3000DIOSetPortDirection Lib "me3000.dll" Alias "_VBme3000DIOSetPortDirection@12" (ByVal lBoardNumber As Long, ByVal lPortNo As Long, ByVal lDir As Long) As Long
Declare Function me3000DIGetBit Lib "me3000.dll" Alias "_VBme3000DIGetBit@16" (ByVal lBoardNumber As Long, ByVal lPortNo As Long, ByVal lBitNo As Long, ByRef pBitValue As Long) As Long
Declare Function me3000DIGetByte Lib "me3000.dll" Alias "_VBme3000DIGetByte@16" (ByVal lBoardNumber As Long, ByVal lPortNo As Long, ByVal lBitNo As Long, ByRef pByteValue As Long) As Long
Declare Function me3000DIGetWord Lib "me3000.dll" Alias "_VBme3000DIGetWord@12" (ByVal lBoardNumber As Long, ByVal lPortNo As Long, ByRef pValue As Long) As Long
Declare Function me3000DOSetBit Lib "me3000.dll" Alias "_VBme3000DOSetBit@16" (ByVal lBoardNumber As Long, ByVal lPortNo As Long, ByVal lBitNo As Long, ByVal lBitValue As Long) As Long
Declare Function me3000DOSetByte Lib "me3000.dll" Alias "_VBme3000DOSetByte@16" (ByVal lBoardNumber As Long, ByVal lPortNo As Long, ByVal lBitNo As Long, ByVal lByteValue As Long) As Long
Declare Function me3000DOSetWord Lib "me3000.dll" Alias "_VBme3000DOSetWord@12" (ByVal lBoardNumber As Long, ByVal lPortNo As Long, ByVal lValue As Long) As Long
Declare Function me3000DOReset Lib "me3000.dll" Alias "_VBme3000DOReset@8" (ByVal lBoardNumber As Long, ByVal lPortNo As Long) As Long
Declare Function me3000PWMStart Lib "me3000.dll" Alias "_VBme3000PWMStart@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000PWMStop Lib "me3000.dll" Alias "_VBme3000PWMStop@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000PWMSetMode Lib "me3000.dll" Alias "_VBme3000PWMSetMode@20" (ByVal lBoardNumber As Long, ByVal dFrequency As Double, ByVal lDutyCycle As Long, ByVal lInverted As Long) As Long
Declare Function me3000DisableExternalInt Lib "me3000.dll" Alias "_VBme3000DisableExternalInt@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000EnableExternalInt Lib "me3000.dll" Alias "_VBme3000EnableExternalInt@8" (ByVal lBoardNumber As Long, ByVal pCallBack As Long) As Long
Declare Function me3000CNTStart Lib "me3000.dll" Alias "_VBme3000CNTStart@8" (ByVal lBoardNumber As Long, ByVal lCounter As Long) As Long
Declare Function me3000CNTReset Lib "me3000.dll" Alias "_VBme3000CNTReset@8" (ByVal lBoardNumber As Long, ByVal lCounter As Long) As Long
Declare Function me3000CNTRead Lib "me3000.dll" Alias "_VBme3000CNTRead@12" (ByVal lBoardNumber As Long, ByVal lCounter As Long, ByRef piCounterValue As Integer) As Long
Declare Function me3000CNTSetRange Lib "me3000.dll" Alias "_VBme3000CNTSetRange@16" (ByVal lBoardNumber As Long, ByVal lCounter As Long, ByVal lEndVal As Long, ByVal lStartVal As Long) As Long
Declare Function me3000CNTInterrupt Lib "me3000.dll" Alias "_VBme3000CNTInterrupt@16" (ByVal lBoardNumber As Long, ByVal lCounter As Long, ByVal lFlag As Long, ByVal pCallBack As Long) As Long
Declare Function me3000SIOReadRegister Lib "me3000.dll" Alias "_VBme3000SIOReadRegister@8" (ByVal lBoardNumber As Long, ByVal cReg As Byte) As Byte
Declare Function me3000SIOWriteRegister Lib "me3000.dll" Alias "_VBme3000SIOWriteRegister@12" (ByVal lBoardNumber As Long, ByVal cReg As Byte, ByVal cVal As Byte) As Byte
Declare Function me3000SIOLoopBackTest Lib "me3000.dll" Alias "_VBme3000SIOLoopBackTest@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000SIOSetup Lib "me3000.dll" Alias "_VBme3000SIOSetup@20" (ByVal lBoardNumber As Long, ByVal lBaud As Long, ByVal lLen As Long, ByVal lStop As Long, ByVal cParity As Byte) As Long
Declare Function me3000SIOGetRegisters Lib "me3000.dll" Alias "_VBme3000SIOGetRegisters@8" (ByVal lBoardNumber As Long, ByRef Regs As ME3000_SIO_REGS) As Long
Declare Function me3000SIOTransmit Lib "me3000.dll" Alias "_VBme3000SIOTransmit@16" (ByVal lBoardNumber As Long, ByVal lMode As Long, ByVal lCount As Long, ByVal lpBuffer As String) As Long
Declare Function me3000SIOReceive Lib "me3000.dll" Alias "_VBme3000SIOReceive@16" (ByVal lBoardNumber As Long, ByVal lMode As Long, ByVal lCount As Long, ByVal lpBuffer As String) As Long
Declare Function me3000SIOOpen Lib "me3000.dll" Alias "_VBme3000SIOOpen@16" (ByVal lBoardNumber As Long, ByVal lMode As Long, ByVal lInbufferSize As Long, ByVal lOutBufferSize As Long) As Long
Declare Function me3000SIOClose Lib "me3000.dll" Alias "_VBme3000SIOClose@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000SIOCheckError Lib "me3000.dll" Alias "_VBme3000SIOCheckError@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000SIOClearBuffer Lib "me3000.dll" Alias "_VBme3000SIOClearBuffer@4" (ByVal lBoardNumber As Long) As Long
Declare Function me3000SIOCheckBuffer Lib "me3000.dll" Alias "_VBme3000SIOCheckBuffer@8" (ByVal lBoardNumber As Long, ByRef pSio As ME3000_SIO) As Long








' Some helper functions
'--------------------------------------------------------------------
Function MAKE_DACFIFOENTRY(ByVal lCh As Long, ByVal lValue As Long) As Long
    MAKE_DACFIFOENTRY = lCh * 4096 + (lValue And &HFFF&)
End Function

